[package]
name = "analog-hors-cozy-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
cozy-chess = { version = "0.3.4", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.release.package.cozy-chess]
opt-level = 3
